# FastLanes

./: .clang-format  .clang-tidy  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  convention.md  pyproject.toml
cuda/: CMakeLists.txt
cuda/src/: cuda_reader.cu
examples/: CMakeLists.txt  c_api.c  cpp_example.cpp  python_example.py
examples/fetch_content_example/: CMakeLists.txt  example.cpp
examples/rust_example/: Cargo.toml  rs_example.rs
python/: CMakeLists.txt
python/bindings/: connection_binding.cpp  init_binding.cpp  table_reader_binding.cpp
python/pyfastlanes/: __init__.py
python/tests/: test_version.py
rust/: Cargo.toml  bridge_shim.cpp  bridge_shim.hpp  build.rs
rust/examples/: rust_example.rs
rust/src/: lib.rs
src/: CMakeLists.txt  connection.cpp
src/alp/src/: CMakeLists.txt  encoder.cpp  fastlanes_ffor.cpp  fastlanes_generated_ffor.cpp  fastlanes_generated_unffor.cpp  fastlanes_unffor.cpp
src/c_api/: c_api_connector.cpp
src/cfg/: CMakeLists.txt  cfg.cpp
src/common/: CMakeLists.txt  alias.cpp  assert.cpp  bimap.cpp  bimap_frequency.cpp  byte_c.cpp  common.cpp  decimal.cpp  double.cpp  exception.cpp  status.cpp  string.cpp
src/cor/: CMakeLists.txt  compression_plan_history.cpp  cor.cpp  exp_pool.cpp
src/cor/eng/: compressor.cpp  decompressor.cpp  sampler.cpp
src/cor/lyt/: buf.cpp  col.cpp  vec.cpp
src/cor/prm/: CMakeLists.txt  prm.cpp  type.cpp
src/csv/: CMakeLists.txt  csv.cpp
src/detail/: CMakeLists.txt  parse_fp.cpp
src/encoder/: CMakeLists.txt  ccc_encoder.cpp  col_encoder.cpp  encoder.cpp  exp_col_decoder.cpp  exp_col_encoder.cpp  materializer.cpp  multi_col_encoder.cpp  random_accessor.cpp  rowgroup_encoder.cpp  single_col_decoder.cpp  single_col_encoder.cpp  verifier.cpp
src/expression/: CMakeLists.txt  alp_expression.cpp  analyze_operator.cpp  cross_rle_operator.cpp  data_parallelize_patch_operator.cpp  data_type.cpp  decoding_operator.cpp  dict_expression.cpp  encoding_operator.cpp  expression_executor.cpp  frequency_operator.cpp  fsst12_dict_operator.cpp  fsst12_expression.cpp  fsst_dict_operator.cpp  fsst_expression.cpp  interpreter.cpp  logical_expression.cpp  new_rpn.cpp  null_operator.cpp  physical_expression.cpp  predicate_operator.cpp  rle_expression.cpp  rpn.cpp  rsum_operator.cpp  scan_operator.cpp  selection_ds.cpp  slpatch_operator.cpp  transpose_operator.cpp  validitymask_operator.cpp
src/file/: CMakeLists.txt  file_footer.cpp  file_header.cpp
src/filter/: filter.cpp
src/flatbuffers/: flatbuffers.cpp
src/footer/: CMakeLists.txt  column_descriptor.cpp  file_descriptor.cpp  rowgroup_descriptor.cpp  rowgroup_footer.cpp  segment_desriptor.cpp  table_descriptor.cpp
src/include/: fastlanes.h  fastlanes.hpp
src/include/alp/: config.hpp  constants.hpp  decoder.hpp  encoder.hpp  rd.hpp  sampler.hpp
src/include/flatbuffers/: allocator.h  array.h  base.h  buffer.h  buffer_ref.h  code_generator.h  code_generators.h  default_allocator.h  detached_buffer.h  file_manager.h  flatbuffer_builder.h  flatbuffers.h  flatc.h  flex_flat_util.h  flexbuffers.h  grpc.h  hash.h  idl.h  minireflect.h  reflection.h  reflection_generated.h  registry.h  stl_emulation.h  string.h  struct.h  table.h  util.h  vector.h  vector_downward.h  verifier.h
src/include/fls/: connection.hpp  info.hpp
src/io/: external_memory.cpp  file.cpp  io.cpp  mmap.cpp  s3.cpp  socket.cpp
src/json/: CMakeLists.txt  fls_json.cpp
src/logger/: logger.cpp
src/primitive/: CMakeLists.txt  primitive.cpp
src/primitive/bitpack/: CMakeLists.txt  bitpack.cpp
src/primitive/copy/: fls_copy.cpp
src/primitive/fls_memset/: fls_memset.cpp
src/primitive/fsst/: CMakeLists.txt  fsst.cpp
src/primitive/fsst12/: fsst12.cpp
src/primitive/patch/: CMakeLists.txt  patch.cpp
src/primitive/predicate/: CMakeLists.txt  equal.cpp
src/primitive/rle/: rle.cpp
src/primitive/untraspose/: CMakeLists.txt  untranspose.cpp
src/primitives/: primitives.cpp
src/primitives/fls/: CMakeLists.txt  double_scalar_transpose.cpp  double_scalar_untranspose.cpp
src/primitives/fls_generated/: fls_generated.cpp
src/printer/: CMakeLists.txt  output.cpp  output_factory.cpp  to_str.cpp
src/reader/: CMakeLists.txt  column_view.cpp  csv_reader.cpp  external_reader.cpp  fls_rowgroup.cpp  json_reader.cpp  reader.cpp  rowgroup_reader.cpp  rowgroup_view.cpp  segment.cpp  table_reader.cpp  table_view.cpp
src/std/: CMakeLists.txt  filesystem.cpp
src/stt/: histogram.cpp  minmax.cpp  stt_fac.cpp
src/table/: CMakeLists.txt  attribute.cpp  chunk.cpp  column.cpp  rowgroup.cpp  stats.cpp  table.cpp  vector.cpp
src/types/: CMakeLists.txt  bool.cpp  date.cpp  integer.cpp  timestamp.cpp  validitymask.cpp
src/utl/: CMakeLists.txt  bit_util.cpp  env.cpp  memory_usage.cpp  random.cpp  util.cpp
src/utl/cpu/: arch.cpp  ftr.cpp  info.cpp
src/wizard/: CMakeLists.txt  sampling_layout.cpp  wizard.cpp
test/src/: CMakeLists.txt
test/src/dataset_tests/: CMakeLists.txt  embedding.cpp  generated_data.cpp  issue.cpp  issues.cpp  nextiajd_test.cpp  public_bi.cpp  realnest_read_test.cpp  test_fc_bench.cpp  tpch.cpp  wrong_schema.cpp
test/src/expression_test/: CMakeLists.txt  test_rle.cpp
test/src/expression_tests/: CMakeLists.txt  alp_test.cpp  cross_rle_test.cpp  frequency_test.cpp  fsst_test.cpp  galp_test.cpp  rle_test.cpp  uncompressed_test.cpp
test/src/fls_reader_tests/: CMakeLists.txt  incomplete_vectors_test.cpp  inlined_footer_test.cpp  rowgroup_size_test.cpp  verify_fastlanes_files_test.cpp
test/src/new_tests/: generated_data.cpp  issue.cpp
test/src/primitive_tests/: CMakeLists.txt  fsst_test.cpp  patch_test.cpp
test/src/quick_fuzz_tests/: CMakeLists.txt  fuzz_config.json  quick_fuzz_test.cpp
test/src/test_datasets/: generated_data.cpp  issue.cpp  public_bi.cpp  wrong_schema.cpp
test/src/unit_tests/: CMakeLists.txt  csv_parser_trailing_delimiter_test.cpp  csv_reader_test.cpp  decimal_test.cpp  double_test.cpp  json_test.cpp  parse_integer_test.cpp  parse_timestamp_12hour_test.cpp  parse_timestamp_test.cpp  parse_timestamp_with_offset_test.cpp  (+3 more)
(+1112 files in other folders)
