macro(fls_add_test NAME SRC)
    add_executable(test_${NAME} ${SRC})
    target_link_libraries(test_${NAME} PUBLIC gtest_main gmock_main FastLanes)
    add_test(NAME test_${NAME} COMMAND $<TARGET_FILE:test_${NAME}>)
    fls_enable_sanitizers(test_${NAME})
endmacro()

fls_add_test(alp alp_test.cpp)
#
fls_add_test(cross_rle cross_rle_test.cpp)
fls_add_test(frequency frequency_test.cpp)
fls_add_test(fsst_expr fsst_test.cpp)
fls_add_test(galp galp_test.cpp)
fls_add_test(rle rle_test.cpp)
fls_add_test(uncompressed uncompressed_test.cpp)
